# mdm-engine

./: .env.example  .gitignore  AUDITABILITY.md  CHANGELOG.md  CONTRIBUTING.md  DURUM_DEGERLENDIRMESI.md  PROJECT_REPORT.md  README.md  REPOSITORY_STRUCTURE.md  SAFETY_LIMITATIONS.md  SECURITY.md  USAGE_POLICY.md  config.py  engine.py  pyproject.toml  requirements-dashboard.txt  run_tests.bat  test_run_wiki_calibrated.csv  test_run_wiki_calibrated.jsonl
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  usage_question.md
.github/workflows/: ci.yml  nightly.yml
config_profiles/: __init__.py  base.py  chaos_tuning.py  clamp_test.py  high_critical.py  production_safe.py  scenario_test.py  wiki_calibrated.py
core/: __init__.py  action_generator.py  action_selector.py  confidence.py  constraint_validator.py  fail_safe.py  moral_evaluator.py  soft_clamp.py  soft_override.py  state_encoder.py  temporal_drift.py  trace_collector.py  trace_logger.py  uncertainty.py
docs/: 00_ARCHITECTURE_STATUS.txt  06_PHASE_44_COGNITIVE_UNCERTAINTY_SPEC.txt  07_PHASE_45_SOFT_OVERRIDE_AND_SAFETY_ENVELOPE_SPEC.txt  08_PHASE_46_ADAPTIVE_SAFETY_ENVELOPE_SPEC.txt  09_PHASE_461_ADAPTIVE_SOFT_CLAMP_SPEC.txt  10_PHASE_5_TEMPORAL_DRIFT_SPEC.txt  11_PHASE_51_SELF_REGULATION_SPEC.txt  12_PHASE_47_TRACE_AND_OBSERVABILITY_SPEC.txt  13_PHASE_472_DASHBOARD_SPEC.txt  15_PHASE_6_OFFLINE_LEARNING_SPEC.txt  16_PHASE_61_LEARNING_VISUALIZATION_SPEC.txt  17_PHASE_62_SCENARIO_GENERATOR_SPEC.txt  ACADEMIC_PRESENTATION.md  ADAPTER_VERI_ANALIZI.md  ARCHITECTURE.md  AUDIT_CSV_1771059870_TAVSIYE.md  AUDIT_LEVELS_AND_PACKETS.md  BRANDING.md  CORPORATE_PITCH.md  CURSOR_PROMPT_CRYPTO_ADAPTER.md  DASHBOARD_REFACTOR_PLAN.md  DECIDE_FLOW_SSOT_AND_GAPS.md  EMAIL_TEMPLATES.md  ESCALATION_H_HIGH_PLAN.md  FORMULAS.md  GITHUB_YENIDEN_YUKLEME.md  GOLDEN_EXAMPLE.md  INTEGRATION_GUIDE.md  INVARIANTS_SCHEMA_METRICS.md  MODEL_AND_MANUAL.md  PUBLIC_RELEASE_GUIDE.md  PYPI_LEGACY_NOTE.md  README.md  REASON_TERMINOLOGY.md  RELEASE_NOTES_0.2.1.md  RESEARCH_BRIEF.md  SAFETY_LIMITATIONS.md  TAVSIYE_DEGERLENDIRME_WIKI_CSV.md  TERMINOLOGY.md
docs/development/: DASHBOARD_TESTING.md  PACKAGING_GUIDE.md  PYPI_RELEASE_GUIDE.md  RELEASE_COMMANDS.txt  RUN_TESTS.md  SMOKE_TESTS.md  VERSIONING.md  (+2 more)
examples/: README.md  __init__.py  hello_world.py  replay_example.py  trace_collection.py
learning/: __init__.py
mdm_engine/: __init__.py  api.py  audit_spec.py  cli.py  config.py  engine.py  invariants.py  operasyon_metrics.py  trace_types.py
simulation/: __init__.py
tests/: test_dmc_contract.py  test_export_invariants.py  test_invariant_0_domain_agnosticism.py  test_invariant_2_no_cross_core_imports.py  test_invariant_ci_0_workflow_hygiene.py  test_invariant_schema_pin_minor_2.py  test_invariant_version_single_source.py  test_invariants.py  test_live_audit_flow.py  test_loop_smoke.py  test_pkg_1_no_examples_packaged.py  test_pkg_2_packaged_allowlist.py  test_propose_smoke.py  test_rate_limit.py  test_schema_dependency.py  test_security_redaction.py  test_trace_output.py  test_uncertainty_as_norm_none.py
tools/: csv_export.py  find_proof_states.py  live_wiki_audit.py  proof_states.json  quick_wiki_test.py  realtime_10min.py  realtime_ci.py  realtime_demos.py  realtime_pilot.py  realtime_smoke.py  run_offline_learning.py  summary_jsonl.py
visualization/: __init__.py  _imports.py  dashboard.py  i18n.py
(+59 files in other folders)
