[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mdm-engine"
version = "0.2.1"
description = "Proposal generation runtime (contract-first; domain-agnostic). Produces decision_schema.types.Proposal from state/context."
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "decision-schema>=0.2,<0.3"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "build"]

[tool.setuptools.packages.find]
where = ["."]
include = ["mdm_engine", "mdm_engine.mdm*", "mdm_engine.security*"]

[tool.ruff]
line-length = 100
target-version = "py311"
